@@ -1,4 +1,5 @@
 Version 0.8.18   - XXX
+  * Fix crash when using keyword arguments with builtin methods
   * Add --keepgoing option to ignore import errors
   * Add --findevil option to make it easier to find objects that crash the interpreter
   * Add support for Python 2.5
